[gd_scene load_steps=5 format=3 uid="uid://bjmg67jkhsynh"]

[ext_resource type="Texture2D" uid="uid://kcw14ykn5tp" path="res://addons/madtalk/images/header_condition.png" id="1"]
[ext_resource type="Texture2D" uid="uid://b37ib00lc25o1" path="res://addons/madtalk/images/header_condition_arrow.png" id="2"]
[ext_resource type="FontFile" path="res://addons/madtalk/fonts/FreeSans_bold_small.tres" id="3"]
[ext_resource type="Script" path="res://addons/madtalk/components/DialogNodeItem_condition.gd" id="4"]

[node name="DialogNodeItem_condition" type="Control"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 130.0
offset_right = 284.0
offset_bottom = 164.0
script = ExtResource("4")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 1.0
offset_right = 128.0
offset_bottom = 33.0
texture = ExtResource("1")

[node name="BGArrow" type="TextureRect" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -12.0
offset_bottom = 12.0
texture = ExtResource("2")

[node name="ConditionLabel" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = 13.0
offset_right = -38.0
offset_bottom = -3.0
theme_override_colors/font_color = Color(1, 0.501961, 0, 1)
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
text = "Condition "
horizontal_alignment = 2
clip_text = true

[connection signal="gui_input" from="." to="." method="_on_DialogNodeItem_condition_gui_input"]
